fix: (0715) 스웨거 https 상대 경로로 수정(1613)